bin/tests/errors/parser/parser_err_expected_token_before.swg
#global fileprivate

#[A B] // swc-expected-error {{parser_err_expected_token_before}}
